--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,5 +1,22 @@
 asgiref==3.5.2
+certifi==2022.6.15
+cffi==1.15.1
+charset-normalizer==2.1.0
+cryptography==37.0.2
+defusedxml==0.7.1
 Django==4.0.5
+django-allauth==0.51.0
 gunicorn==20.1.0
+idna==3.3
+newrelic==7.14.0.177
+oauthlib==3.2.0
 psycopg2-binary==2.9.3
+pycparser==2.21
+PyJWT==2.4.0
+python-dotenv==0.20.0
+python3-openid==3.2.0
+raven==6.10.0
+requests==2.28.1
+requests-oauthlib==1.3.1
 sqlparse==0.4.2
+urllib3==1.26.9
