--- a/.gitignore
+++ b/.gitignore
@@ -110,10 +110,8 @@ ENV/
 env.bak/
 venv.bak/
 *.env
-.env.prod
-.env.dev
-.env.test
-.env.staging
+.env.*
+
 
 # Spyder project settings
 .spyderproject
