--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -8,6 +8,9 @@ Django==4.0.5
 django-allauth==0.51.0
 gunicorn==20.1.0
 idna==3.3
+importlib-metadata==4.12.0
+lorem==0.1.1
+Markdown==3.3.7
 newrelic==7.14.0.177
 oauthlib==3.2.0
 psycopg2-binary==2.9.3
@@ -20,3 +23,4 @@ requests==2.28.1
 requests-oauthlib==1.3.1
 sqlparse==0.4.2
 urllib3==1.26.9
+zipp==3.8.1
