adding coverage to requirements.txt

--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.2
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.1.0
+coverage==6.4.2
 cryptography==37.0.2
 defusedxml==0.7.1
 Django==4.0.5
