--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - 8000:8000
     env_file:
-      - ./prod.env
+      - ./env.prod
     depends_on:
       - db
   db:
@@ -18,8 +18,6 @@ services:
     container_name: db
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-    env_file:
-      - ./prod.db.env
 
 volumes:
   postgres_data:
