updating Dockerfile.prod and docker-compose.prod.yml

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,18 +6,52 @@ services:
     build: 
       context: ./app
       dockerfile: Dockerfile.prod
-    command: gunicorn blog.wsgi:application --bind 0.0.0.0:8000
-    ports:
-      - 8000:8000
+    command: newrelic-admin run-program gunicorn blog.wsgi:application --bind 0.0.0.0:8000
+    restart: always
+    volumes:
+      - static_volume:/home/app/web/staticfiles
+      - media_volume:/home/app/web/mediafiles
+    expose:
+      - 8000
     env_file:
       - ./env.prod
-    depends_on:
-      - db
-  db:
-    image: postgres:13.0-alpine
-    container_name: db
+
+  nginx-proxy:
+    container_name: nginx-proxy
+    build: nginx
+    restart: always
+    ports:
+      - 443:443
+      - 80:80
     volumes:
-      - postgres_data:/var/lib/postgresql/data/
+      - static_volume:/home/app/web/staticfiles
+      - media_volume:/home/app/web/mediafiles
+      - certs:/etc/nginx/certs
+      - html:/usr/share/nginx/html
+      - vhost:/etc/nginx/vhost.d
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+    depends_on:
+      - web
+
+  nginx-proxy-letsencrypt:
+    container_name: letsencrypt-nginx-proxy-companion
+    image: jrcs/letsencrypt-nginx-proxy-companion
+    env_file:
+      - ./.env.prod.proxy-companion
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - certs:/etc/nginx/certs
+      - html:/usr/share/nginx/html
+      - vhost:/etc/nginx/vhost.d
+      - acme:/etc/acme.sh
+    depends_on:
+      - nginx-proxy
+    restart: always
 
 volumes:
-  postgres_data:
+  static_volume:
+  media_volume:
+  certs:
+  html:
+  vhost:
+  acme:
