--- a/.github/workflows/blog_on_ecr.yml
+++ b/.github/workflows/blog_on_ecr.yml
@@ -13,15 +13,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
-      matrix:
-        python-version: [3.10]
-
 
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+      uses: actions/setup-python@4
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: '3.10'
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
