--- a/.github/workflows/blog_on_ecr.yml
+++ b/.github/workflows/blog_on_ecr.yml
@@ -17,6 +17,7 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+    - name: python version
       uses: actions/setup-python@4
       with:
         python-version: '3.10'
