--- a/.github/workflows/blog_on_ecr.yml
+++ b/.github/workflows/blog_on_ecr.yml
@@ -13,14 +13,16 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
+      matrix:
+        python-version: ['3.10']
 
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-    - name: python version
-      uses: actions/setup-python@3
+    - name: set up python ${{ matrix.python-version }}
+      uses: actions/setup-python@4
       with:
-        python-version: '3.10'
+        python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
