--- a/.github/workflows/blog_on_ecr.yml
+++ b/.github/workflows/blog_on_ecr.yml
@@ -31,8 +31,8 @@ jobs:
     - name: Create .env.prod file
       run: |
         touch .env.prod
-        echo DEBUG=${{ secrets.DEBUG }} >> .env.prod
-        echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env.prod
+        echo DJANGO_DEBUG=${{ secrets.DJANGO_DEBUG }} >> .env.prod
+        echo DJANGO_SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env.prod
         echo DJANGO_ALLOWED_HOSTS=${{ secrets.DJANGO_ALLOWED_HOSTS }} >> .env.prod
         echo SQL_ENGINE=django.db.backends.postgresql >> .env.prod
         echo SQL_DATABASE=blog >> .env.prod
